syntax = "proto3";

package gameplay_service;

import "../common/entry.proto";

message VerifySignatureRequest {
    string message = 1;  // Message field, like "hello world"
    string publicKey = 2;  // Public key (hex string)
    string signature = 3;  // Signature (hex string)
    string chainKey = 4;  // Supported chain (optional)
    string network = 5;  // Network type (optional)
    string accountAddress = 6;  // Account address (optional)
    DeviceInfo deviceInfo = 7;  // Device information
}
  
  // Message for VerifySignatureResponse
message VerifySignatureResponse {
    string accessToken = 1;  // JWT access token
    string refreshToken = 2;  // JWT refresh token
}
